--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
 
-<body class="mx-auto w-10/12">
+<body class="mx-auto w-10/12" onload="loadData()">
     <header class="text-center my-10">
         <h1 class="text-3xl font-semibold">AI Universe Hub</h1>
         <button class="btn border-0 hover:bg-red-600 bg-red-500 mt-10">Sort By Date</button>
@@ -22,34 +22,6 @@
 
     <main>
         <section class="grid md:grid-cols-3 gap-5" id="card-container">
-            <div class="card card-compact bg-base-100 border">
-                <figure class="px-4 pt-4">
-                    <img src="https://picsum.photos/seed/picsum/200/300" alt="Shoes" class="rounded-xl h-52 w-full" />
-                </figure>
-                <div class="card-body">
-                    <h2 class="card-title">Features</h2>
-                    <ol class="list-decimal list-inside text-gray-500">
-                        <li>Natural language processing</li>
-                        <li>Contextual understanding</li>
-                        <li>Text generation</li>
-                    </ol>
-                    <hr class="my-2">
-                    <div class="flex items-center justify-between">
-                        <div>
-                            <h2 class="text-xl font-semibold">ChatGPT</h2>
-                            <div class="text-gray-500 flex gap-2">
-                                <i class="bi bi-calendar4-week"></i>
-                                <p>11/01/2022</p>
-                            </div>
-                        </div>
-                        <div class="rounded-full bg-red-100 p-2">
-                            <label for="show-details-modal">
-                                <i class="bi bi-arrow-right font-bold text-red-500 px-1 py-2"></i>
-                            </label>
-                        </div>
-                    </div>
-                </div>
-            </div>
         </section>
 
         <section class="text-center">
@@ -107,6 +79,8 @@
             </div>
         </div>
     </div>
+
+    <script src="./js/script.js"></script>
 </body>
 
 </html>
