--- a/index.html
+++ b/index.html
@@ -34,48 +34,7 @@
     <div class="modal">
         <div class="modal-box max-w-3xl relative">
             <label for="show-details-modal" class="btn btn-sm btn-circle absolute right-2 top-2">✕</label>
-            <div class="grid md:grid-cols-2 gap-4 mt-6">
-                <div class="card card-compact bg-base-100 border border-red-600 bg-red-50">
-                    <div class="card-body">
-                        <h2 class="card-title">Facebook Ai is a collection of tools and technologies developed by
-                            Facebook to advance the field of artificial intelligence.</h2>
-                        <div class="grid md:grid-cols-3 justify-between gap-3 text-center my-2">
-                            <p class="p-2 bg-white text-green-700 rounded-xl font-bold">Free of Cost/Basic</p>
-                            <p class="p-2 bg-white text-orange-600 rounded-xl font-bold">Free Of Cost/Pro</p>
-                            <p class="p-2 bg-white text-red-700 rounded-xl font-bold">Free of Cost /Enterprise</p>
-                        </div>
-                        <div class="grid md:grid-cols-2 justify-between gap-3">
-                            <div>
-                                <h2 class="text-xl font-semibold">Features</h2>
-                                <ul class="text-gray-500 list-inside list-disc">
-                                    <li>Natural language processing</li>
-                                </ul>
-                            </div>
-                            <div>
-                                <h2 class="text-xl font-semibold">Integrations</h2>
-                                <ul class="text-gray-500 list-inside list-disc">
-                                    No data Found
-                                    <li>No data Found</li>
-                                    <li>No data Found</li>
-                                </ul>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="card card-compact bg-base-100 border relative">
-                    <figure class="px-4 pt-4">
-                        <img src="https://picsum.photos/seed/picsum/200/300" alt="Shoes"
-                            class="rounded-xl w-full h-52" />
-                    </figure>
-                    <div class="card-body text-center">
-                        <h2 class="card-title text-center block">Can you give any example?</h2>
-                        <p class="text-gray-500">No! Not Yet! Take a break!!!</p>
-                    </div>
-
-                    <div class="absolute right-6 top-8">
-                        <span class="p-2 text-white rounded-xl bg-red-500">94% accuracy</span>
-                    </div>
-                </div>
+            <div class="grid md:grid-cols-2 gap-4 mt-6" id="card-details">
             </div>
         </div>
     </div>
