Remove 'Show More' button when 'Show All' is clicked, and display all cards

--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
         <section class="grid md:grid-cols-3 gap-5" id="card-container">
         </section>
 
-        <section class="text-center">
-            <button class="btn border-0 hover:bg-red-600 bg-red-500 my-10">See More</button>
+        <section class="text-center mb-10">
+            <button id="show-all-btn" class="btn border-0 hover:bg-red-600 bg-red-500 my-10">See More</button>
         </section>
     </main>
 
