--- a/index.html
+++ b/index.html
@@ -21,6 +21,19 @@
     </header>
 
     <main>
+        <section class="hidden text-red-500" id="spinner">
+            <div class="flex items-center justify-center" id="sppiner">
+                <div
+                  class="inline-block h-8 w-8 animate-spin rounded-full border-4 border-solid border-current border-r-transparent align-[-0.125em] motion-reduce:animate-[spin_1.5s_linear_infinite]"
+                  role="status">
+                  <span
+                    class="!absolute !-m-px !h-px !w-px !overflow-hidden !whitespace-nowrap !border-0 !p-0 ![clip:rect(0,0,0,0)]"
+                    >Loading...</span
+                  >
+                </div>
+            </div>
+        </section>
+
         <section class="grid md:grid-cols-3 gap-5" id="card-container">
         </section>
 
