fix show-all-btn issue

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         </section>
 
         <section class="text-center mb-10">
-            <button id="show-all-btn" class="btn border-0 hover:bg-red-600 bg-red-500 my-10">See More</button>
+            <button id="show-all-btn" class="hidden btn border-0 hover:bg-red-600 bg-red-500 my-10">See More</button>
         </section>
     </main>
 
