Add sort by date functionality

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <body class="mx-auto w-10/12" onload="loadData()">
     <header class="text-center my-10">
         <h1 class="text-3xl font-semibold">AI Universe Hub</h1>
-        <button class="btn border-0 hover:bg-red-600 bg-red-500 mt-10">Sort By Date</button>
+        <button onclick="sortCards()" class="btn border-0 hover:bg-red-600 bg-red-500 mt-10">Sort By Date</button>
     </header>
 
     <main>
