Make cards responsive

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             </div>
         </section>
 
-        <section class="grid md:grid-cols-3 gap-5" id="card-container">
+        <section class="grid md:grid-cols-2 lg:grid-cols-3 gap-5" id="card-container">
         </section>
 
         <section class="text-center mb-10">
